--- a/copy/opt/dsapid/ui/views/about.html
+++ b/copy/opt/dsapid/ui/views/about.html
@@ -1,21 +1,21 @@
-<a href="http://git.io/zh_4NA" target="_blank"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_orange_ff7600.png" alt="Fork me on GitHub"></a>
+<a href="https://github.com/jfqd/mi-dsapid" target="_blank"><img style="position: absolute; top: 0; left: 0; border: 0;" src="/assets/forkme_left_orange_ff7600.png" alt="Fork me on GitHub"></a>
 
-<h2>What is datasets.at?</h2>
-<p>datasets.at is a mirror for SmartOS datasets/images located in Germany.</p>
+<h2>What is dsapi.qutic.net?</h2>
+<p>dsapi.qutic.net is a mirror for SmartOS datasets/images for the qutic SmartMachines.</p>
 
 <h2>How can I use this mirror?</h2>
-<p>To be able to use datasets.at as a source for datasets you need to add <code>http://datasets.at/</code> to the sources list of <code>imgadm</code> and refresh the dataset list.</p>
-<p>datasets.at syncs with the default dataset server provided by joyent so it is also possible to replace the default entry completely.</p>
+<p>To be able to use dsapi.qutic.net as a source for datasets you need to add <code>https://dsapi.qutic.net/</code> to the sources list of <code>imgadm</code> and refresh the dataset list.</p>
+<p>dsapi.qutic.net syncs with the default dataset server provided by joyent so it is also possible to replace the default entry completely.</p>
 
 <p>First you should determine which version of imgadm your SmartOS box is using by executing <code>imgadm --version</code></p>
 <p>You'll either see a version like: <code>imgadm 2.0.2</code> which indicates you're on a more recent version of SmartOS or the default command listing (because the older imgadm does not know about the --version switch)</p>
 
 <h4>If you're using an older version of SmartOS with imgadm v1</h4>
-<pre>echo "http://datasets.at/datasets" > /var/db/imgadm/sources.list
+<pre>echo "https://dsapi.qutic.net/datasets" > /var/db/imgadm/sources.list
 imgadm update</pre>
 
 <h4>If you're using a more recent version of SmartOS with imgadm v2</h4>
-<pre>imgadm sources -a http://datasets.at/
+<pre>imgadm sources -a https://dsapi.qutic.net/
 imgadm sources -d https://images.joyent.com
 imgadm update</pre>
 <p>The source deletion of <code>https://images.joyent.com</code> can be skipped - it will just ensure that you'll grab every image from this mirror</p>
@@ -31,7 +31,7 @@ imgadm update</pre>
 imgadm update</pre>
 
 <h4>If you're using a more recent version of SmartOS with imgadm v2</h4>
-<pre>imgadm sources -d http://datasets.at/
+<pre>imgadm sources -d https://dsapi.qutic.net/
 imgadm sources -a https://images.joyent.com
 imgadm update</pre>
 
