--- a/copy/opt/dsapid/ui/views/home.html
+++ b/copy/opt/dsapid/ui/views/home.html
@@ -1,8 +1,6 @@
 <div class="jumbotron text-center">
 	<h1>Datasets for SmartOS!</h1>
-	<p class="lead">most of the datasets provided are built by <a href="http://www.joyent.com/" target="_blank">joyent</a>
-		<br />
-		but there is also a growing list of datasets made by the community.</p>
+	<p class="lead">Build for qutic SmartMachines</p>
 </div>
 
 <div ng-show="latest.length > 0">
